add me, myself and I

--- a/members.yml
+++ b/members.yml
@@ -45,3 +45,8 @@
   github:  marfi
   twitter: marfuzii
   web:     unigraph.rocks
+  
+- name:    Stefan Haslinger
+  github:  haslinger
+  twitter: informatom
+  web:     informatom.com
